WP2Static UPDATE wp-content/uploads/elementor/css/post-1000.css

--- a/wp-content/uploads/elementor/css/post-1000.css
+++ b/wp-content/uploads/elementor/css/post-1000.css
@@ -105,7 +105,7 @@ body:not(.rtl) .elementor-1000 .elementor-element.elementor-element-aa86555 .ele
 .elementor-1000 .elementor-element.elementor-element-9339cef .elementor-icon-box-content .elementor-icon-box-description {color: #000;font-family: "Asap",Sans-serif;font-size: 15px;font-weight: 400;line-height: 2em;}
 .elementor-1000 .elementor-element.elementor-element-9339cef > .tippy-popper .tippy-tooltip .tippy-content {text-align: center;}
 .elementor-1000 .elementor-element.elementor-element-83171d1:not(.elementor-motion-effects-element-type-background), .elementor-1000 .elementor-element.elementor-element-83171d1 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: transparent;background-image: linear-gradient(180deg,rgba(218,228,110,.99) 0%,#45de84 100%);}
-.elementor-1000 .elementor-element.elementor-element-83171d1 > .elementor-background-overlay {background-image: url("http://OFFLINEZIP.wpshowp-content/uploads/2020/05/office-1209640_1280.jpg");opacity: .13;transition: background .3s,border-radius .3s,opacity .3s;}
+.elementor-1000 .elementor-element.elementor-element-83171d1 > .elementor-background-overlay {background-image: url("https://github.com/janakaep/gci/wp-content/uploads/2020/05/office-1209640_1280.jpg");opacity: .13;transition: background .3s,border-radius .3s,opacity .3s;}
 .elementor-1000 .elementor-element.elementor-element-83171d1 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;padding: 100px 20px 48px 20px;}
 @media (min-width:768px) {.elementor-1000 .elementor-element.elementor-element-51decb1 {width: 27.907%;}
 	.elementor-1000 .elementor-element.elementor-element-53bde37 {width: 19.535%;}
